--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libirecovery"]
 	path = libirecovery
-	url = https://github.com/chronicdev/libirecovery.git
+	url = git://github.com/Chronic-Dev/libirecovery.git
